New endpoints for using brainscapes client
